--- a/app/views/watch.scala.html
+++ b/app/views/watch.scala.html
@@ -116,6 +116,9 @@
             <form id="join" action="@controllers.routes.Main.join(arena)">
                 <button type="submit">join</button>
             </form>
+            <form id="pause" action="pauseResume()">
+                <button type="submit">Pause/Resume</button>
+            </form>
         </div>
     </div>
     <div id="arena"></div>
